移除无用信息

--- a/options/options.html
+++ b/options/options.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>WebChat - 设置</title>
+    <title>ElecAI - 设置</title>
     <link rel="stylesheet" href="options.css">
 </head>
 
